<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>

    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>
    <string name="sort_oldest_first">Les plus anciens d’abord</string>
    <string name="sort_recent_first">Les plus récents d’abord</string>

    <string name="add_task">Ajouter une tâche</string>
    <string name="add">Ajouter</string>

    <string name="no_task">Tu n’as aucune tâche à traiter</string>

    <string name="task_name_hint">Nom de la tâche</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="sign_in_btn">Se connecter</string>
    <string name="logout_menu">logout</string>
    <string name="logout_btn">Se déconnecter</string>
    <string name="first_connection">"Première connexion "</string>
    <string name="lastName">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="save_profil">Enregistrer</string>
    <string name="cancel_profil_creation">Annuler</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="delete_account_title">SUPPRESSION DE COMPTE</string>
    <string name="confirm_delete">Souhaitez-vous poursuivre la suppression de votre compte ?</string>
    <string name="confirm_btn_text">CONFIRMER</string>
    <string name="cancel_delete">RETOUR</string>
    <string name="user_deleted">Utilisateur supprimé!</string>
    <string name="welcome">"Bienvenue "</string>
    <string name="user_unrecognised">Utilisateur non reconnu !</string>
    <string name="confirm_password">Retapez le mot de passe</string>
    <string name="change_password">Veuillez changer votre mot de passe:</string>
    <string name="empty_field">"Veuillez remplir ce champs!"</string>
    <string name="different_password">"Mots de passe non identiques!"</string>
    <string name="saved_password">"Mot de passe enregistré ! Connectez-vous "</string>
    <string name="search">Rechercher…</string>
    <string name="app_title_admin">Todoc - Administrateur</string>
    <string name="search_project">Rechercher un projet…</string>
    <string name="add_employee">Ajout d\'un nouveau compte</string>
    <string name="save_employee">"Enregistrer le compte et envoyer le mot de passe par mail"</string>
    <string name="default_password">Mot de passe par défaut</string>
    <string name="account_saved">Compte enregistré !</string>
</resources>
